--- a/KLib/CMakeLists.txt
+++ b/KLib/CMakeLists.txt
@@ -5,4 +5,5 @@ cmake_minimum_required (VERSION 3.8)
 
 # 将源添加到此项目的可执行文件。
 ADD_SUBDIRECTORY(Memory)
+ADD_SUBDIRECTORY(test)
 # TODO: 如有需要，请添加测试并安装目标。
