--- a/KLib/Memory/CMakeLists.txt
+++ b/KLib/Memory/CMakeLists.txt
@@ -1,5 +1,4 @@
-cmake_minimum_required (VERSION 3.8)
+cmake_minimum_required (VERSION 3.5)
 
-SET(BOOST_ROOT "D:\\local\\boost_1_67_0\\")
-SET(INCLUDE_PATH  ${BOOST_ROOT})
+SET(INCLUDE_PATH .)
 include_directories(${INCLUDE_PATH})
