完成基本功能

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@
 # 和此处的包含子项目。
 #
 cmake_minimum_required (VERSION 3.5)
-SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++03")
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++03 -g")
 project ("KLib")
 
 # 包含子项目。
