--- a/KLib/Memory/CMakeLists.txt
+++ b/KLib/Memory/CMakeLists.txt
@@ -1,4 +1,4 @@
 cmake_minimum_required (VERSION 3.5)
 
-SET(INCLUDE_PATH .)
+SET(INCLUDE_PATH . "D:\\local\\boost_1_67_0")
 include_directories(${INCLUDE_PATH})
