--- a/KLib/String/CMakeLists.txt
+++ b/KLib/String/CMakeLists.txt
@@ -1,5 +1,4 @@
 cmake_minimum_required (VERSION 3.5)
 
-SET(INCLUDE_PATH . "D:\\local\\boost_1_67_0" ${PROJECT_SOURCE_DIR}/KLib)
-
+SET(INCLUDE_PATH . "D:\\local\\boost_1_67_0")
 include_directories(${INCLUDE_PATH})
