完成令牌桶实现的限流算法

--- a/KLib/test/CMakeLists.txt
+++ b/KLib/test/CMakeLists.txt
@@ -6,3 +6,5 @@ add_executable(test_lru test_lru.cpp)
 target_link_libraries(test_lru boost_system)
 add_executable(test_tostr test_tostr.cpp)
 target_link_libraries(test_tostr boost_system)
+add_executable(test_rate_limit test_rate_limit.cpp)
+target_link_libraries(test_rate_limit boost_system boost_thread)
